db-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db-service
  name: db-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/swe599-k3s-application-default: "true"
        io.kompose.service: db-service
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: app
            - name: POSTGRES_PASSWORD
              value: test
            - name: POSTGRES_USER
              value: ilayda
          image: postgres:12-alpine
          name: db-service
          resources: {}
      restartPolicy: Always
status: {}
