db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    io.kompose.service: db-service
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
